--- a/cv.html
+++ b/cv.html
@@ -65,8 +65,101 @@
             </ul>
         </nav>
     </header>
+
     <div class="content">
+        <div class="container">
+            <header>
+                <h1>SEA TPI</h1>
+                <h2>Analyste SOC / Cybersécurité</h2>
+                <p>7 ans 3 mois d'expérience</p>
+            </header>
+
+            <section class="experience">
+                <h3>Expérience Professionnelle</h3>
+
+                <div class="job">
+                    <h4>Analyste SOC / Cybersécurité</h4>
+                    <p><strong>CDI</strong> | Avril 2022 - Aujourd'hui (2 ans 6 mois)</p>
+                    <p>Paris (Hybride)</p>
+                    <ul>
+                        <li>SOC Analyste N2 : Traitement des alertes de sécurité, analyse, qualification et réponse aux incidents</li>
+                        <li>Investigation Open Source Intelligence (OSINT), Cyber Threat Intelligence</li>
+                        <li>Technologies : SIEM, EPP, EDR, etc. (Tehtris, Sophos, Microsoft Defender...)</li>
+                        <li>Gestion de crise, astreinte N1</li>
+                        <li>Création de templates, procédures et documents techniques</li>
+                        <li>Journal intranet (CyberVeille, Patch Tuesday...)</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien N2 - AVIVA France</h4>
+                    <p><strong>CDI</strong> | Août 2021 - Mars 2022 (8 mois)</p>
+                    <p>Bois-Colombes (Sur site)</p>
+                    <ul>
+                        <li>Création de procédures, déplacement multi-sites</li>
+                        <li>Gestion des demandes et incidents, rapports Backlog et SLA</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien de Proximité N2 - Groupe BPCE-IT</h4>
+                    <p><strong>CDI</strong> | Juillet 2017 - Août 2021 (4 ans 2 mois)</p>
+                    <p>Région de Paris (Sur site)</p>
+                    <ul>
+                        <li>Préparation des postes, gestion des demandes et incidents</li>
+                        <li>Gestion d'inventaire, intervention réseau</li>
+                        <li>Gestion d’équipe sur site et à distance, intervention multi-sites</li>
+                        <li>Accompagnement des nouveaux arrivants</li>
+                        <li>Projet "OPEN" : Réaménagement en Open Space, configuration de 150 postes</li>
+                        <li>Migration de Windows 7 à Windows 10</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien de Proximité - Sysmex</h4>
+                    <p><strong>Temps partiel</strong> | Février 2019 - Juin 2019 (5 mois)</p>
+                    <p>Villepinte (Sur site)</p>
+                    <ul>
+                        <li>Déploiement du parc informatique, gestion de l'AD</li>
+                        <li>Création de procédures spécifiques</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien de Proximité - SNCF</h4>
+                    <p><strong>Alternance</strong> | Septembre 2016 - Juin 2017 (10 mois)</p>
+                    <p>Villeneuve triage (Sur site)</p>
+                    <ul>
+                        <li>Déploiement des PC Rame, prise en main à distance « Dameware »</li>
+                        <li>Hotline, brassage de baies réseaux</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien - Banque de France (SPAD)</h4>
+                    <p><strong>Alternance</strong> | Septembre 2015 - Août 2016 (1 an)</p>
+                    <p>Région de Paris (Sur site)</p>
+                    <ul>
+                        <li>Déploiement et dépannage d'iPhones, utilisation de la gestion du parc informatique (REPAR)</li>
+                    </ul>
+                </div>
+
+                <div class="job">
+                    <h4>Technicien - Exide Technologies</h4>
+                    <p><strong>CDI</strong> | Février 2015 - Avril 2015 (3 mois)</p>
+                    <p>Gennevilliers (Sur site)</p>
+                    <ul>
+                        <li>Prise de contrôle à distance avec TeamViewer</li>
+                        <li>Réparation du fichier de démarrage (GRUB et MBR)</li>
+                        <li>Protection réseau avec McAfee, création de partitions</li>
+                        <li>Montage et démontage d'ordinateurs</li>
+                        <li>Gestion des quotas d’espace disque avec Hyper-V</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </div>
+
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
