--- a/cv.html
+++ b/cv.html
@@ -109,7 +109,7 @@
 <body>
 
     <header>
-        <h1>Jean Dupont</h1>
+        <h1>Test</h1>
         <h2>Analyste SOC / Cybersécurité</h2>
     </header>
 
@@ -171,7 +171,7 @@
     </div>
 
     <footer>
-        &copy; 2024 Jean Dupont - Tous droits réservés
+        &copy; 2024 Darconex. Tous droits réservés.
     </footer>
 
 </body>
