--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/x-styles.css">
+    <link rel="icon" href="img/logo.png" title="logo">
+    <script src="js/script.js"></script>
     <style>
         html, body {
             height: 100%;
