--- a/cv.html
+++ b/cv.html
@@ -3,154 +3,186 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Darconex</title>
+    <title>CV Déroulant - Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/x-styles.css">
     <link rel="icon" href="img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            overflow: hidden;
-        }
         body {
-            background-color: #f0f0f0;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
         }
         header {
-            background-color: #403f3f;
+            background-color: #333;
             padding: 10px;
+        }
+        .navbar ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+            background-color: #444;
+        }
+        .navbar ul li {
+            display: inline;
+        }
+        .navbar ul li a {
+            text-decoration: none;
             color: white;
-            text-align: center;
+            padding: 14px 20px;
+            display: block;
+        }
+        .navbar ul li a:hover {
+            background-color: #555;
+        }
+        .nav-link-disabled {
+            color: inherit;
+            text-decoration: none;
+            cursor: default;
         }
         .content {
-            position: relative;
-            height: 100vh;
+            flex: 1;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+        }
+        .cv-container {
+            max-width: 800px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: hidden;
         }
-        .cv {
-            position: absolute;
-            width: 100%;
-            animation: scroll 30s linear infinite;
+        .section-title {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: #333;
         }
-        @keyframes scroll {
-            0% {
-                top: 100%;
-            }
-            100% {
-                top: -100%;
-            }
-        }
-        .job {
+        .experience {
             margin-bottom: 20px;
-            padding: 0 20px;
         }
-        .job h3 {
-            margin: 0;
-            color: #403f3f;
+        .job-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #007BFF;
+        }
+        .job-details {
+            margin-top: 5px;
+        }
+        .scrolling-section {
+            max-height: 400px;
+            overflow-y: auto;
+            padding-right: 10px;
+        }
+        .scrolling-section::-webkit-scrollbar {
+            width: 6px;
+        }
+        .scrolling-section::-webkit-scrollbar-thumb {
+            background-color: #007BFF;
+            border-radius: 10px;
         }
         footer {
             text-align: center;
             padding: 10px;
             background-color: #403f3f;
-            font-size: 0.9em;
             color: white;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
+
     <header>
-        <h1>CV - Darconex</h1>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">Cyber</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
     <div class="content">
-        <div class="cv">
-            <section class="job">
-                <h3>Analyste SOC / Cybersécurité - SEA TPI</h3>
-                <p>CDI - De avril 2022 à aujourd'hui (2 ans 6 mois)</p>
-                <p>Paris - Hybride</p>
-                <ul>
-                    <li>SOC Analyste N2 : traitement des alertes, analyse et réponse aux incidents</li>
-                    <li>Technologies : SIEM, EPP, EDR, Protection de la messagerie, OSINT, CTI</li>
-                    <li>Investigation, Threat Hunting, gestion de crise</li>
-                    <li>Création de templates et documents techniques</li>
-                    <li>Veille cybersécurité et gestion des alertes CVE</li>
-                    <li>Technologies : Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, etc.</li>
-                </ul>
-            </section>
+        <div class="cv-container">
+            <h1>Mon CV</h1>
+            <div class="scrolling-section">
+                <div class="experience">
+                    <div class="job-title">Analyste SOC / Cybersécurité - SEA TPI</div>
+                    <div class="job-details">
+                        <strong>CDI</strong><br>
+                        De avril 2022 à aujourd'hui · 2 ans 6 mois · Paris · Hybride
+                        <ul>
+                            <li>Traitement des alertes de sécurité</li>
+                            <li>Analyse, qualification et réponse aux incidents de sécurité</li>
+                            <li>Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie)</li>
+                            <li>Investigation sur Open Source Intelligence (OSINT)</li>
+                            <li>Gestion de crise et astreinte pour le N1</li>
+                        </ul>
+                    </div>
+                </div>
 
-            <section class="job">
-                <h3>Technicien N2 - AVIVA France</h3>
-                <p>CDI - Du août 2021 au mars 2022 (8 mois)</p>
-                <p>Bois-Colombes, Île-de-France, France</p>
-                <ul>
-                    <li>Création de procédures</li>
-                    <li>Déplacements multi-sites</li>
-                    <li>Gestion des demandes et incidents</li>
-                    <li>Suivi du backlog et des SLA</li>
-                </ul>
-            </section>
+                <div class="experience">
+                    <div class="job-title">Technicien N2 - AVIVA France</div>
+                    <div class="job-details">
+                        <strong>CDI</strong><br>
+                        D'août 2021 à mars 2022 · 8 mois · Bois-Colombes, Île-de-France
+                        <ul>
+                            <li>Création de procédures</li>
+                            <li>Déplacement multi-sites</li>
+                            <li>Gestion demandes et incidents</li>
+                            <li>Rapport Backlog et SLA</li>
+                        </ul>
+                    </div>
+                </div>
 
-            <section class="job">
-                <h3>Technicien de Proximité N2 - Groupe BPCE-IT</h3>
-                <p>CDI - Du juil. 2017 au août 2021 (4 ans 2 mois)</p>
-                <p>Région de Paris, France</p>
-                <ul>
-                    <li>Préparation des postes et gestion des incidents</li>
-                    <li>Gestion d'inventaire, intervention réseau</li>
-                    <li>Gestion d’équipe sur site et à distance</li>
-                    <li>Déploiement de la solution One-Q</li>
-                    <li>Projet « OPEN » : aménagement de bureaux en Open Space</li>
-                </ul>
-            </section>
+                <div class="experience">
+                    <div class="job-title">Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT</div>
+                    <div class="job-details">
+                        <strong>CDI</strong><br>
+                        De juillet 2017 à août 2021 · 4 ans 2 mois · Paris
+                        <ul>
+                            <li>Préparation des postes</li>
+                            <li>Gestion demandes et incidents</li>
+                            <li>Intervention réseau</li>
+                            <li>Gestion d’équipe sur site et à distance</li>
+                        </ul>
+                    </div>
+                </div>
 
-            <section class="job">
-                <h3>Technicien de Proximité - Sysmex</h3>
-                <p>Temps partiel - Du févr. 2019 au juin 2019 (5 mois)</p>
-                <p>Villepinte, Île-de-France</p>
-                <ul>
-                    <li>Déploiement du parc informatique</li>
-                    <li>Création de procédures spécifiques à l'entreprise</li>
-                    <li>Gestion de l'Active Directory</li>
-                </ul>
-            </section>
+                <!-- Ajoutez d'autres expériences ici -->
 
-            <section class="job">
-                <h3>Technicien de Proximité - SNCF</h3>
-                <p>Contrat en alternance - Du sept. 2016 au juin 2017 (10 mois)</p>
-                <p>Villeneuve Triage</p>
-                <ul>
-                    <li>Déploiement des PC Rame</li>
-                    <li>Prise en main à distance avec « Dameware »</li>
-                    <li>Hotline et brassage de baies réseaux</li>
-                </ul>
-            </section>
-
-            <section class="job">
-                <h3>Technicien de Proximité - Banque de France (SPAD)</h3>
-                <p>Contrat en alternance - Du sept. 2015 au août 2016 (1 an)</p>
-                <p>Région de Paris, France</p>
-                <ul>
-                    <li>Déploiement des iPhones avec Air Watch</li>
-                    <li>Dépannage des iPhones</li>
-                    <li>Gestion du parc informatique</li>
-                </ul>
-            </section>
-
-            <section class="job">
-                <h3>Technicien de Proximité - Exide Technologies</h3>
-                <p>Du févr. 2015 au avr. 2015 (3 mois)</p>
-                <p>Gennevillier</p>
-                <ul>
-                    <li>Prise de contrôle à distance avec TeamViewer</li>
-                    <li>Réparation des fichiers de démarrage (GRUB, MBR)</li>
-                    <li>Mise en place de réseau et protection informatique avec McAfee</li>
-                </ul>
-            </section>
+            </div>
         </div>
     </div>
+
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
+
 </body>
 </html>
