--- a/cv.html
+++ b/cv.html
@@ -9,14 +9,13 @@
     <link rel="icon" href="img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
         }
         header {
             background-color: #333;
@@ -52,6 +51,7 @@
             padding: 20px;
             display: flex;
             justify-content: center;
+            background-color: #f4f4f4;
         }
         .cv-container {
             max-width: 800px;
@@ -59,23 +59,6 @@
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-        .section-title {
-            font-size: 24px;
-            margin-bottom: 10px;
-            color: #333;
-        }
-        .experience {
-            margin-bottom: 20px;
-        }
-        .job-title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #007BFF;
-        }
-        .job-details {
-            margin-top: 5px;
         }
         .scrolling-section {
             max-height: 400px;
@@ -89,12 +72,26 @@
             background-color: #007BFF;
             border-radius: 10px;
         }
+        .experience {
+            margin-bottom: 20px;
+        }
+        .job-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #007BFF;
+        }
+        .job-details {
+            margin-top: 5px;
+        }
         footer {
             text-align: center;
             padding: 10px;
             background-color: #403f3f;
             color: white;
             font-size: 0.9em;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
