--- a/cv.html
+++ b/cv.html
@@ -14,43 +14,119 @@
             margin: 0;
             display: flex;
             flex-direction: column;
+            font-family: Arial, sans-serif;
         }
         body {
             flex: 1;
         }
+
+        /* Style général pour tous les écrans */
+        .navbar {
+            background-color: #282828;
+            padding: 15px;
+        }
+
+        .nav-list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        .nav-item {
+            margin: 0 10px;
+        }
+
+        .nav-link {
+            color: white;
+            text-decoration: none;
+        }
+
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
             cursor: default;
         }
+
+        .content {
+            flex: 1;
+            padding: 20px;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+
+        .section {
+            margin-bottom: 20px;
+        }
+
+        .job-info {
+            color: #666;
+        }
+
         footer {
             text-align: center;
             padding: 10px;
             background-color: #403f3f;
+            color: white;
             font-size: 0.9em;
             position: relative;
             bottom: 0;
             width: 100%;
         }
-        .content {
-            flex: 1;
-            padding: 20px;
+
+        /* Media queries pour les téléphones */
+        @media (max-width: 768px) {
+            .nav-list {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .nav-item {
+                margin-bottom: 15px;
+            }
+
+            .content {
+                padding: 10px;
+            }
+
+            ul {
+                padding-left: 15px;
+            }
+
+            footer {
+                font-size: 0.8em;
+            }
         }
-        h2 {
-            color: #333;
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .job-info {
-            color: #666;
-        }
-        .job-title {
-            font-weight: bold;
+
+        @media (max-width: 480px) {
+            .nav-list {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .nav-item {
+                margin-bottom: 10px;
+            }
+
+            .content {
+                padding: 5px;
+            }
+
+            ul {
+                padding-left: 10px;
+            }
+
+            footer {
+                font-size: 0.7em;
+            }
         }
     </style>
 </head>
