--- a/cv.html
+++ b/cv.html
@@ -102,6 +102,74 @@
                     <li>Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</li>
                 </ul>
             </ul>
+
+            <p><strong>Technicien de Proximité N2 - Utilisateur et VIP - Groupe BPCE-IT</strong> <br> CDI - Du août 2021 au mars 2022 · 8 mois <br> Bois-Colombes, Île-de-France</p>
+            <ul>
+                <li>Création de procédures</li>
+                <li>Déplacement multi-sites</li>
+                <li>Gestion des demandes et incidents</li>
+                <li>Rapport Backlog et SLA</li>
+            </ul>
+
+            <p><strong>Technicien de Proximité N2 - Utilisateur et VIP - Groupe BPCE-IT</strong> <br> CDI - De juil. 2017 à août 2021 · 4 ans 2 mois <br> Région de Paris, France</p>
+            <ul>
+                <li>Préparation des postes</li>
+                <li>Gestion des demandes et incidents</li>
+                <li>Intervention réseau</li>
+                <li>Gestion d’inventaire</li>
+                <li>Gestion d’équipe (intérimaire) sur site et à distance</li>
+                <li>Intervention sur multi-sites</li>
+                <li>Accompagnement des nouveaux arrivants</li>
+                <li>Déploiement de la solution One-Q</li>
+                <li>BAR-IT</li>
+            </ul>
+
+            <p><strong>Projet « OPEN » - Réaménagement du site en Open Space</strong> (Durée du projet 1 an)</p>
+            <ul>
+                <li>Aménagement des bureaux en Open Space</li>
+                <li>Gestion et accompagnement à l’utilisation du nouveau matériel</li>
+                <li>Préparation et configuration de 150 postes</li>
+                <li>Analyse de chaque port pour mise dans le bon VLAN (IMP, Poste, Wifi)</li>
+                <li>Migration de W7 à W10</li>
+            </ul>
+
+            <p><strong>Technicien de Proximité - Sysmex</strong> <br> Temps partiel - De févr. 2019 à juin 2019 · 5 mois <br> Villepinte, France</p>
+            <ul>
+                <li>Déploiement du parc informatique</li>
+                <li>Création de procédures sur des outils propres à l'entreprise</li>
+                <li>Gestion de l'AD</li>
+            </ul>
+
+            <p><strong>Technicien de Proximité - SNCF</strong> <br> Contrat en alternance - De sept. 2016 à juin 2017 · 10 mois <br> Villeneuve triage</p>
+            <ul>
+                <li>Déploiement des PC Rame</li>
+                <li>Masterisation des postes informatiques</li>
+                <li>Prise en main à distance « Dameware »</li>
+                <li>Utilisation de logiciel bureautique</li>
+                <li>Hotline</li>
+                <li>Brassage de baies réseaux</li>
+            </ul>
+
+            <p><strong>SPAD (Service Pré-études Approvisionnement Déploiements) - Banque de France</strong> <br> Contrat en alternance - De sept. 2015 à août 2016 · 1 an <br> Région de Paris, France</p>
+            <ul>
+                <li>Déploiement des iPhones sur le terminal Air Watch</li>
+                <li>Dépannage des iPhones</li>
+                <li>Gestion du parc informatique (REPAR)</li>
+            </ul>
+
+            <p><strong>Technicien de Proximité - Exide Technologies</strong> <br> Du févr. 2015 à avr. 2015 · 3 mois <br> Gennevilliers, France</p>
+            <ul>
+                <li>Prise de contrôle à distance avec TeamViewer</li>
+                <li>Réparation du fichier de démarrage (GRUB et MBR)</li>
+                <li>Protection réseau et informatique avec McAfee</li>
+                <li>Mise en place d'un lecteur réseau</li>
+                <li>Installation de PC et imprimantes dans un réseau</li>
+                <li>Montage et démontage d'ordinateurs portables et fixes</li>
+                <li>Assistance sur logiciels de bureautique</li>
+                <li>Ghosting des ordinateurs</li>
+                <li>Diagnostic des pannes d’ordinateur</li>
+                <li>Utilisation de Hyper-V (quotas, partitions, autorisations, déploiement de master)</li>
+            </ul>
         </div>
     </div>
     <footer>
