--- a/cv.html
+++ b/cv.html
@@ -35,6 +35,8 @@
         .content {
             flex: 1;
             padding: 20px;
+            overflow-y: auto;
+            max-height: 80vh; /* Limite la hauteur et ajoute du défilement */
         }
         .cv-section {
             margin: 20px 0;
